feat: Added views feature, delete capabilities and minor bug fixes
- version bumped to 1.0.2-DEV
- views monitoring in the database
- delete endpoint added along with documentation
- Removed unnessecary logs from sequelize to the console
- Fixed userId being generated inside the links table

--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "dashlink",
-  "version": "1.0.1-DEV",
+  "version": "1.0.2-DEV",
   "main": "index.js",
   "scripts": {
     "serve": "node app.js",
     "test": "nodemon app.js"
   },
-  "keywords": ["link shortening", "dashlink", "self-hosted"],
+  "keywords": [
+    "link shortening",
+    "dashlink",
+    "self-hosted"
+  ],
   "author": "Sidhartha Rao",
   "license": "MIT",
   "description": "A no-BS link shortening service",
