--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,8 @@
     "password": "sid",
     "database": "dashlink",
     "host": "archlinux",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "logging": false
   },
   "test": {
     "username": "root",
